@@ -8,8 +8,12 @@ import com.github.benmanes.caffeine.cache.Caffeine;
 import com.muying.framework.biz.context.holder.LoginUserContextHolder;
 import com.muying.framework.common.exception.BizException;
 import com.muying.framework.common.response.Response;
+import com.muying.framework.common.util.DateUtils;
 import com.muying.framework.common.util.JsonUtils;
+import com.muying.framework.common.util.NumberUtils;
 import com.muying.framework.common.util.ParamUtils;
+import com.muying.xiaohongshu.count.dto.FindUserCountsByIdRspDTO;
+import com.muying.xiaohongshu.user.biz.constant.MQConstants;
 import com.muying.xiaohongshu.user.biz.constant.RedisKeyConstants;
 import com.muying.xiaohongshu.user.biz.constant.RoleConstants;
 import com.muying.xiaohongshu.user.biz.domain.entity.RoleDO;
@@ -22,19 +26,28 @@ import com.muying.xiaohongshu.user.biz.enums.DeletedEnum;
 import com.muying.xiaohongshu.user.biz.enums.ResponseCodeEnum;
 import com.muying.xiaohongshu.user.biz.enums.SexEnum;
 import com.muying.xiaohongshu.user.biz.enums.StatusEnum;
+import com.muying.xiaohongshu.user.biz.model.vo.FindUserProfileReqVO;
+import com.muying.xiaohongshu.user.biz.model.vo.FindUserProfileRspVO;
 import com.muying.xiaohongshu.user.biz.model.vo.UpdateUserInfoReqVO;
+import com.muying.xiaohongshu.user.biz.rpc.CountRpcService;
 import com.muying.xiaohongshu.user.biz.rpc.DistributedIdGeneratorRpcService;
 import com.muying.xiaohongshu.user.biz.rpc.OssRpcService;
 import com.muying.xiaohongshu.user.biz.service.UserService;
 import com.muying.xiaohongshu.user.dto.req.*;
 import com.muying.xiaohongshu.user.dto.resp.FindUserByIdRspDTO;
 import com.muying.xiaohongshu.user.dto.resp.FindUserByPhoneRspDTO;
-import io.micrometer.common.util.StringUtils;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.rocketmq.client.producer.SendCallback;
+import org.apache.rocketmq.client.producer.SendResult;
+import org.apache.rocketmq.spring.core.RocketMQTemplate;
+import org.springframework.data.redis.core.RedisCallback;
 import org.springframework.data.redis.core.RedisOperations;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.SessionCallback;
+import org.springframework.messaging.Message;
+import org.springframework.messaging.support.MessageBuilder;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -43,10 +56,7 @@ import cn.hutool.core.util.RandomUtil;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -56,23 +66,45 @@ import java.util.stream.Collectors;
 @Service
 @Slf4j
 public class UserServiceImpl implements UserService {
-    @Resource
-    private OssRpcService ossRpcService;
+
     @Resource
     private UserDOMapper userDOMapper;
-
     @Resource
     private UserRoleDOMapper userRoleDOMapper;
     @Resource
     private RoleDOMapper roleDOMapper;
     @Resource
+    private OssRpcService ossRpcService;
+    @Resource
     private RedisTemplate<String, Object> redisTemplate;
-
     @Resource
     private DistributedIdGeneratorRpcService distributedIdGeneratorRpcService;
-
     @Resource(name = "taskExecutor")
     private ThreadPoolTaskExecutor threadPoolTaskExecutor;
+    @Resource
+    private UserDOMapper userMapper;
+    @Resource
+    private CountRpcService countRpcService;
+    @Resource
+    private RocketMQTemplate rocketMQTemplate;
+
+    /**
+     * 用户信息本地缓存
+     */
+    private static final Cache<Long, FindUserByIdRspDTO> LOCAL_CACHE = Caffeine.newBuilder()
+            .initialCapacity(10000) // 设置初始容量为 10000 个条目
+            .maximumSize(10000) // 设置缓存的最大容量为 10000 个条目
+            .expireAfterWrite(1, TimeUnit.HOURS) // 设置缓存条目在写入后 1 小时过期
+            .build();
+
+    /**
+     * 用户主页信息本地缓存
+     */
+    private static final Cache<Long, FindUserProfileRspVO> PROFILE_LOCAL_CACHE = Caffeine.newBuilder()
+            .initialCapacity(10000) // 设置初始容量为 10000 个条目
+            .maximumSize(10000) // 设置缓存的最大容量为 10000 个条目
+            .expireAfterWrite(5, TimeUnit.MINUTES) // 设置缓存条目在写入后 5 分钟过期
+            .build();
 
     /**
      * 更新用户信息
@@ -82,9 +114,19 @@ public class UserServiceImpl implements UserService {
      */
     @Override
     public Response<?> updateUserInfo(UpdateUserInfoReqVO updateUserInfoReqVO) {
+        // 被更新的用户 ID
+        Long userId = updateUserInfoReqVO.getUserId();
+        // 当前登录的用户 ID
+        Long loginUserId = LoginUserContextHolder.getUserId();
+
+        // 非号主本人，无法修改其个人信息
+        if (!Objects.equals(loginUserId, userId)) {
+            throw new BizException(ResponseCodeEnum.CANT_UPDATE_OTHER_USER_PROFILE);
+        }
+
         UserDO userDO = new UserDO();
         // 设置当前需要更新的用户 ID
-        userDO.setId(LoginUserContextHolder.getUserId());
+        userDO.setId(userId);
         // 标识位：是否需要更新
         boolean needUpdate = false;
 
@@ -95,8 +137,7 @@ public class UserServiceImpl implements UserService {
             String avatar = ossRpcService.uploadFile(avatarFile);
             log.info("==> 调用 oss 服务成功，上传头像，url：{}", avatar);
 
-            // 若上传头像失败，则抛出业务异常
-            if (StringUtils.isBlank(avatar)) {
+            if (org.apache.commons.lang3.StringUtils.isBlank(avatar)) {
                 throw new BizException(ResponseCodeEnum.UPLOAD_AVATAR_FAIL);
             }
 
@@ -106,7 +147,7 @@ public class UserServiceImpl implements UserService {
 
         // 昵称
         String nickname = updateUserInfoReqVO.getNickname();
-        if (StringUtils.isNotBlank(nickname)) {
+        if (org.apache.commons.lang3.StringUtils.isNotBlank(nickname)) {
             Preconditions.checkArgument(ParamUtils.checkNickname(nickname), ResponseCodeEnum.NICK_NAME_VALID_FAIL.getErrorMessage());
             userDO.setNickname(nickname);
             needUpdate = true;
@@ -114,8 +155,8 @@ public class UserServiceImpl implements UserService {
 
         // 小哈书号
         String xiaohashuId = updateUserInfoReqVO.getXiaohongshuId();
-        if (StringUtils.isNotBlank(xiaohashuId)) {
-            Preconditions.checkArgument(ParamUtils.checkXiaohashuId(xiaohashuId), ResponseCodeEnum.XIAOHASHU_ID_VALID_FAIL.getErrorMessage());
+        if (org.apache.commons.lang3.StringUtils.isNotBlank(xiaohashuId)) {
+            Preconditions.checkArgument(ParamUtils.checkXiaohongshuId(xiaohashuId), ResponseCodeEnum.XIAOHONGSHU_ID_VALID_FAIL.getErrorMessage());
             userDO.setXiaohongshuId(xiaohashuId);
             needUpdate = true;
         }
@@ -137,7 +178,7 @@ public class UserServiceImpl implements UserService {
 
         // 个人简介
         String introduction = updateUserInfoReqVO.getIntroduction();
-        if (StringUtils.isNotBlank(introduction)) {
+        if (org.apache.commons.lang3.StringUtils.isNotBlank(introduction)) {
             Preconditions.checkArgument(ParamUtils.checkLength(introduction, 100), ResponseCodeEnum.INTRODUCTION_VALID_FAIL.getErrorMessage());
             userDO.setIntroduction(introduction);
             needUpdate = true;
@@ -149,8 +190,7 @@ public class UserServiceImpl implements UserService {
             String backgroundImg = ossRpcService.uploadFile(backgroundImgFile);
             log.info("==> 调用 oss 服务成功，上传背景图，url：{}", backgroundImg);
 
-            // 若上传背景图失败，则抛出业务异常
-            if (StringUtils.isBlank(backgroundImg)) {
+            if (org.apache.commons.lang3.StringUtils.isBlank(backgroundImg)) {
                 throw new BizException(ResponseCodeEnum.UPLOAD_BACKGROUND_IMG_FAIL);
             }
 
@@ -159,11 +199,55 @@ public class UserServiceImpl implements UserService {
         }
 
         if (needUpdate) {
+            // 删除用户缓存
+            deleteUserRedisCache(userId);
+
             // 更新用户信息
             userDO.setUpdateTime(LocalDateTime.now());
             userDOMapper.updateByPrimaryKeySelective(userDO);
+
+            // 延时双删
+            sendDelayDeleteUserRedisCacheMQ(userId);
         }
         return Response.success();
+    }
+
+    /**
+     * 异步发送延时消息
+     * @param userId
+     */
+    private void sendDelayDeleteUserRedisCacheMQ(Long userId) {
+        Message<String> message = MessageBuilder.withPayload(String.valueOf(userId))
+                .build();
+
+        rocketMQTemplate.asyncSend(MQConstants.TOPIC_DELAY_DELETE_USER_REDIS_CACHE, message,
+                new SendCallback() {
+                    @Override
+                    public void onSuccess(SendResult sendResult) {
+                        log.info("## 延时删除 Redis 用户缓存消息发送成功...");
+                    }
+
+                    @Override
+                    public void onException(Throwable e) {
+                        log.error("## 延时删除 Redis 用户缓存消息发送失败...", e);
+                    }
+                },
+                3000, // 超时时间
+                1 // 延迟级别，1 表示延时 1s
+        );
+    }
+
+    /**
+     * 删除 Redis 中的用户缓存
+     * @param userId
+     */
+    private void deleteUserRedisCache(Long userId) {
+        // 构建 Redis Key
+        String userInfoRedisKey = RedisKeyConstants.buildUserInfoKey(userId);
+        String userProfileRedisKey = RedisKeyConstants.buildUserProfileKey(userId);
+
+        // 批量删除
+        redisTemplate.delete(Arrays.asList(userInfoRedisKey, userProfileRedisKey));
     }
 
     /**
@@ -188,9 +272,6 @@ public class UserServiceImpl implements UserService {
         }
 
         // 否则注册新用户
-        // 获取全局自增的小哈书 ID
-        // Long xiaohongshuId = redisTemplate.opsForValue().increment(RedisKeyConstants.XIAOHONGSHU_ID_GENERATOR_KEY);
-
         // RPC: 调用分布式 ID 生成服务生成小哈书 ID
         String xiaohongshuId = distributedIdGeneratorRpcService.getXiaohongshuId();
 
@@ -201,7 +282,7 @@ public class UserServiceImpl implements UserService {
         UserDO userDO = UserDO.builder()
                 .id(userId)
                 .phone(phone)
-                .xiaohongshuId(String.valueOf(xiaohongshuId)) // 自动生成小红书号 ID
+                .xiaohongshuId(xiaohongshuId) // 自动生成小红书号 ID
                 .nickname("小红薯" + xiaohongshuId) // 自动生成昵称, 如：小红薯10000
                 .status(StatusEnum.ENABLE.getValue()) // 状态为启用
                 .createTime(LocalDateTime.now())
@@ -211,6 +292,9 @@ public class UserServiceImpl implements UserService {
 
         // 添加入库
         userDOMapper.insert(userDO);
+
+        // 获取刚刚添加入库的用户 ID
+        // Long userId = userDO.getId();
 
         // 给该用户分配一个默认角色
         UserRoleDO userRoleDO = UserRoleDO.builder()
@@ -284,15 +368,6 @@ public class UserServiceImpl implements UserService {
     }
 
     /**
-     * 用户信息本地缓存
-     */
-    private static final Cache<Long, FindUserByIdRspDTO> LOCAL_CACHE = Caffeine.newBuilder()
-            .initialCapacity(10000) // 设置初始容量为 10000 个条目
-            .maximumSize(10000) // 设置缓存的最大容量为 10000 个条目
-            .expireAfterWrite(1, TimeUnit.HOURS) // 设置缓存条目在写入后 1 小时过期
-            .build();
-
-    /**
      * 根据用户 ID 查询用户信息
      *
      * @param findUserByIdReqDTO
@@ -316,15 +391,13 @@ public class UserServiceImpl implements UserService {
         String userInfoRedisValue = (String) redisTemplate.opsForValue().get(userInfoRedisKey);
 
         // 若 Redis 缓存中存在该用户信息
-        if (StringUtils.isNotBlank(userInfoRedisValue)) {
+        if (org.apache.commons.lang3.StringUtils.isNotBlank(userInfoRedisValue)) {
             // 将存储的 Json 字符串转换成对象，并返回
             FindUserByIdRspDTO findUserByIdRspDTO = JsonUtils.parseObject(userInfoRedisValue, FindUserByIdRspDTO.class);
             // 异步线程中将用户信息存入本地缓存
             threadPoolTaskExecutor.submit(() -> {
-                if (Objects.nonNull(findUserByIdRspDTO)) {
-                    // 写入本地缓存
-                    LOCAL_CACHE.put(userId, findUserByIdRspDTO);
-                }
+                // 写入本地缓存
+                LOCAL_CACHE.put(userId, findUserByIdRspDTO);
             });
             return Response.success(findUserByIdRspDTO);
         }
@@ -393,8 +466,7 @@ public class UserServiceImpl implements UserService {
         // 将过滤后的缓存集合，转换为 DTO 返参实体类
         if (CollUtil.isNotEmpty(redisValues)) {
             findUserByIdRspDTOS = redisValues.stream()
-                    .map(value -> JsonUtils.parseObject(String.valueOf(value), FindUserByIdRspDTO.class))
-                    .collect(Collectors.toList());
+                    .map(value -> JsonUtils.parseObject(String.valueOf(value), FindUserByIdRspDTO.class)).toList();
         }
 
         // 如果被查询的用户信息，都在 Redis 缓存中, 则直接返回
@@ -435,6 +507,7 @@ public class UserServiceImpl implements UserService {
                             .introduction(userDO.getIntroduction())
                             .build())
                     .collect(Collectors.toList());
+
             // 异步线程将用户信息同步到 Redis 中
             List<FindUserByIdRspDTO> finalFindUserByIdRspDTOS = findUserByIdRspDTOS2;
             threadPoolTaskExecutor.submit(() -> {
@@ -443,28 +516,24 @@ public class UserServiceImpl implements UserService {
                         .collect(Collectors.toMap(FindUserByIdRspDTO::getId, p -> p));
 
                 // 执行 pipeline 操作
-                redisTemplate.executePipelined(new SessionCallback<>() {
-                    @Override
-                    public Object execute(RedisOperations operations) {
-                        for (UserDO userDO : userDOS) {
-                            Long userId = userDO.getId();
+                redisTemplate.executePipelined((RedisCallback<Void>) connection -> {
+                    for (UserDO userDO : userDOS) {
+                        Long userId = userDO.getId();
 
-                            // 用户信息缓存 Redis Key
-                            String userInfoRedisKey = RedisKeyConstants.buildUserInfoKey(userId);
+                        // 用户信息缓存 Redis Key
+                        String userInfoRedisKey = RedisKeyConstants.buildUserInfoKey(userId);
 
-                            // DTO 转 JSON 字符串
-                            FindUserByIdRspDTO findUserInfoByIdRspDTO = map.get(userId);
-                            String value = JsonUtils.toJsonString(findUserInfoByIdRspDTO);
+                        // DTO 转 JSON 字符串
+                        FindUserByIdRspDTO findUserInfoByIdRspDTO = map.get(userId);
+                        String value = JsonUtils.toJsonString(findUserInfoByIdRspDTO);
 
-                            // 过期时间（保底1天 + 随机秒数，将缓存过期时间打散，防止同一时间大量缓存失效，导致数据库压力太大）
-                            long expireSeconds = 60*60*24 + RandomUtil.randomInt(60*60*24);
-                            operations.opsForValue().set(userInfoRedisKey, value, expireSeconds, TimeUnit.SECONDS);
-                        }
-                        return null;
+                        // 过期时间（保底1天 + 随机秒数，将缓存过期时间打散，防止同一时间大量缓存失效，导致数据库压力太大）
+                        long expireSeconds = 60*60*24 + RandomUtil.randomInt(60*60*24);
+                        redisTemplate.opsForValue().set(userInfoRedisKey, value, expireSeconds, TimeUnit.SECONDS);
                     }
+                    return null;
                 });
             });
-            // TODO: 异步线程将用户信息同步到 Redis 中
         }
 
         // 合并数据
@@ -475,5 +544,140 @@ public class UserServiceImpl implements UserService {
         return Response.success(findUserByIdRspDTOS);
     }
 
+    /**
+     * 获取用户主页信息
+     *
+     * @param findUserProfileReqVO
+     * @return
+     */
+    @Override
+    public Response<FindUserProfileRspVO> findUserProfile(FindUserProfileReqVO findUserProfileReqVO) {
+        // 要查询的用户 ID
+        Long userId = findUserProfileReqVO.getUserId();
+
+        // 若入参中用户 ID 为空，则查询当前登录用户
+        if (Objects.isNull(userId)) {
+            userId = LoginUserContextHolder.getUserId();
+        }
+
+        // 1. 优先查本地缓存
+        if (!Objects.equals(userId, LoginUserContextHolder.getUserId())) { // 如果是用户本人查看自己的主页，则不走本地缓存（对本人保证实时性）
+            FindUserProfileRspVO userProfileLocalCache = PROFILE_LOCAL_CACHE.getIfPresent(userId);
+            if (Objects.nonNull(userProfileLocalCache)) {
+                log.info("## 用户主页信息命中本地缓存: {}", JsonUtils.toJsonString(userProfileLocalCache));
+                return Response.success(userProfileLocalCache);
+            }
+        }
+
+        // 2. 再查询 Redis 缓存
+        String userProfileRedisKey = RedisKeyConstants.buildUserProfileKey(userId);
+
+        String userProfileJson = (String) redisTemplate.opsForValue().get(userProfileRedisKey);
+
+        if (StringUtils.isNotBlank(userProfileJson)) {
+            FindUserProfileRspVO findUserProfileRspVO = JsonUtils.parseObject(userProfileJson, FindUserProfileRspVO.class);
+            // 异步同步到本地缓存
+            syncUserProfile2LocalCache(userId, findUserProfileRspVO);
+            // 如果是作者本人查看，保证计数的实时性
+            authorGetActualCountData(userId, findUserProfileRspVO);
+
+            return Response.success(findUserProfileRspVO);
+        }
+
+        // 3. 若 Redis 中无缓存，再查询数据库
+        UserDO userDO = userMapper.selectByPrimaryKey(userId);
+
+        if (Objects.isNull(userDO)) {
+            throw new BizException(ResponseCodeEnum.USER_NOT_FOUND);
+        }
+
+        // 构建返参 VO
+        FindUserProfileRspVO findUserProfileRspVO = FindUserProfileRspVO.builder()
+                .userId(userDO.getId())
+                .avatar(userDO.getAvatar())
+                .nickname(userDO.getNickname())
+                .xiaohongshuId(userDO.getXiaohongshuId())
+                .sex(userDO.getSex())
+                .introduction(userDO.getIntroduction())
+                .build();
+
+        // 计算年龄
+        LocalDate birthday = userDO.getBirthday();
+        findUserProfileRspVO.setAge(Objects.isNull(birthday) ? 0 : DateUtils.calculateAge(birthday));
+
+        // RPC: Feign 调用计数服务
+        // 关注数、粉丝数、收藏与点赞总数；获得的点赞数、收藏数
+        rpcCountServiceAndSetData(userId, findUserProfileRspVO);
+
+        // 异步同步到 Redis 中
+        syncUserProfile2Redis(userProfileRedisKey, findUserProfileRspVO);
+        // 异步同步到本地缓存
+        syncUserProfile2LocalCache(userId, findUserProfileRspVO);
+
+        return Response.success(findUserProfileRspVO);
+    }
+
+    /**
+     * Feign 调用计数服务, 并设置计数数据
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void rpcCountServiceAndSetData(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        FindUserCountsByIdRspDTO findUserCountsByIdRspDTO = countRpcService.findUserCountById(userId);
+
+        if (Objects.nonNull(findUserCountsByIdRspDTO)) {
+            Long fansTotal = findUserCountsByIdRspDTO.getFansTotal();
+            Long followingTotal = findUserCountsByIdRspDTO.getFollowingTotal();
+            Long likeTotal = findUserCountsByIdRspDTO.getLikeTotal();
+            Long collectTotal = findUserCountsByIdRspDTO.getCollectTotal();
+            Long noteTotal = findUserCountsByIdRspDTO.getNoteTotal();
+
+            findUserProfileRspVO.setFansTotal(NumberUtils.formatNumberString(fansTotal));
+            findUserProfileRspVO.setFollowingTotal(NumberUtils.formatNumberString(followingTotal));
+            findUserProfileRspVO.setLikeAndCollectTotal(NumberUtils.formatNumberString(likeTotal + collectTotal));
+            findUserProfileRspVO.setNoteTotal(NumberUtils.formatNumberString(noteTotal));
+            findUserProfileRspVO.setLikeTotal(NumberUtils.formatNumberString(likeTotal));
+            findUserProfileRspVO.setCollectTotal(NumberUtils.formatNumberString(collectTotal));
+        }
+    }
+
+    /**
+     * 作者本人获取真实的计数数据（保证实时性）
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void authorGetActualCountData(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        if (Objects.equals(userId, LoginUserContextHolder.getUserId())) {
+            rpcCountServiceAndSetData(userId, findUserProfileRspVO);
+        }
+    }
+
+    /**
+     * 异步同步到本地缓存
+     *
+     * @param userId
+     * @param findUserProfileRspVO
+     */
+    private void syncUserProfile2LocalCache(Long userId, FindUserProfileRspVO findUserProfileRspVO) {
+        threadPoolTaskExecutor.submit(() -> {
+            PROFILE_LOCAL_CACHE.put(userId, findUserProfileRspVO);
+        });
+    }
+
+    /**
+     * 异步同步到 Redis 中
+     *
+     * @param userProfileRedisKey
+     * @param findUserProfileRspVO
+     */
+    private void syncUserProfile2Redis(String userProfileRedisKey, FindUserProfileRspVO findUserProfileRspVO) {
+        threadPoolTaskExecutor.submit(() -> {
+            // 设置随机过期时间 (2小时以内)
+            long expireTime = 60*60 + RandomUtil.randomInt(60 * 60);
+
+            // 将 VO 转为 Json 字符串写入到 Redis 中
+            redisTemplate.opsForValue().set(userProfileRedisKey, JsonUtils.toJsonString(findUserProfileRspVO), expireTime, TimeUnit.SECONDS);
+        });
+    }
 }
 
